# pam_escalate

./: CMakeLists.txt  Makefile  README  config.h.cmake  helpers.c  helpers.h  pam_escalate.c  start.c
